--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^2.25.4",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.7",
     "mini-css-extract-plugin": "^2.5.2",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
