--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "lint": "eslint .",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack-dev-server --mode development",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
